--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    <h>10. Botafogo</h>
+    <h1>10. Botafogo</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStai7yFnQERzpnhSzvQXIoEwfq-0QnhdD-Rg&s" alt="">
     <p>O Botafogo é um clube histórico do Rio de Janeiro, conhecido como a “Estrela Solitária” por seu símbolo emblemático. Fundado em 1904, o clube tem uma tradição imensa na revelação de grandes craques, como Garrincha, Nilton Santos e Jairzinho, ícones do futebol brasileiro e mundial. Apesar de enfrentar altos e baixos nas últimas décadas, o Botafogo mantém uma torcida fiel e apaixonada, que sofre junto com o time e celebra cada conquista com muita emoção. O clube é reconhecido pelo seu estilo de jogo técnico e ofensivo, e por sua importância cultural no cenário do futebol carioca e nacional.</p>
-    <h>9. Cruzeiro</h>
+    <h1>9. Cruzeiro</h1>
     <img src="https://medias.itatiaia.com.br/dims4/default/726dda7/2147483647/strip/true/crop/1918x1080+1+0/resize/1000x563!/quality/90/?url=https%3A%2F%2Fk2-prod-radio-itatiaia.s3.us-east-1.amazonaws.com%2Fbrightspot%2Fef%2F1f%2F1b685a224c15b6c09e679834f329%2Fmercado-da-bola-2024-noticias-portal-cruzeiro.png" alt="">
     <p>O Cruzeiro, de Belo Horizonte, é um dos maiores clubes do futebol brasileiro, com uma história marcada por conquistas nacionais e internacionais. Fundado em 1921, o clube tem em seu currículo títulos importantes, como duas Copas Libertadores (1976 e 1997) e várias edições do Campeonato Brasileiro. O Cruzeiro é conhecido por sua forte base na formação de jogadores, revelando grandes talentos que fizeram história no Brasil e no exterior. Apesar de ter enfrentado dificuldades recentes, sua estrutura, torcida e tradição permanecem intactas, mantendo o clube como uma potência do futebol mineiro e nacional.</p>
-    <h>8. Atlético Mineiro</h>
+    <h1>8. Atlético Mineiro</h1>
     <img src="https://p2.trrsf.com/image/fget/cf/1200/1600/middle/images.terra.com/2025/08/22/1138473557-escudo-do-atletico-mg-2.jpg" alt="">
     <p>O Atlético Mineiro, também de Belo Horizonte, é conhecido pela paixão e fervor de sua torcida, a “Torcida Galo”, uma das mais vibrantes do Brasil. Fundado em 1908, o clube tem uma trajetória cheia de altos e baixos, mas consolidou sua posição entre os grandes com a histórica conquista da Copa Libertadores em 2013, quebrando um jejum de títulos internacionais. O Atlético é famoso pelo estilo de jogo ofensivo e pela força dentro de seu estádio, o Mineirão, onde a torcida exerce um papel fundamental. Além disso, possui rivalidades intensas, principalmente com o Cruzeiro, o que faz do clássico mineiro um dos mais disputados do país.</p>
-    <h>7. Internacional</h>
+    <h1>7. Internacional</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUJzOdgKxI6n4Tn8Dqe4gK90lLDdvRmvGiLA&s" alt="">
     <p>O Internacional, de Porto Alegre, é um dos clubes mais importantes do Sul do Brasil, fundado em 1909. Conhecido por sua estrutura profissional e pela formação de talentos, o Internacional tem em seu histórico conquistas de peso, como a Copa Libertadores (2006 e 2010) e o Mundial de Clubes da FIFA (2006). O clube se destaca pela competitividade em todas as competições que disputa, sempre com uma equipe forte e equilibrada. A torcida colorada é apaixonada e presente, especialmente nos jogos contra o rival Grêmio, com quem protagoniza o clássico Gre-Nal, uma das rivalidades mais intensas do futebol brasileiro.</p>
-    <h>6. Grêmio</h>
+    <h1>6. Grêmio</h1>
     <img src="https://jpimg.com.br/uploads/2023/04/conheca-a-historia-do-gremio-no-brasileirao.jpg" alt="">
     <p>Também de Porto Alegre, o Grêmio foi fundado em 1903 e é um dos clubes mais tradicionais do Brasil. O Tricolor Gaúcho é reconhecido mundialmente por suas conquistas, incluindo a Copa Libertadores (1983, 1995 e 2017) e o Mundial de Clubes (1983). Com uma torcida apaixonada e muito fiel, o Grêmio tem uma história marcada por momentos de superação e sucesso, além de uma forte identidade tática e um estilo de jogo aguerrido. O estádio Arena do Grêmio é um dos mais modernos do país e uma fortaleza para a equipe. O clássico contra o Internacional, o Gre-Nal, é um dos confrontos mais aguardados e acirrados do futebol sul-americano.</p>
-    <h>5. Santos</h>
+    <h1>5. Santos</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQEXug2as4haXj3CGB3pzV2gm6dVFn-MBPbw&s" alt="">
     <p>O Santos FC, fundado em 1912, é um dos clubes mais emblemáticos do futebol brasileiro, conhecido mundialmente por revelar Pelé, considerado o maior jogador da história do futebol. O clube tem uma tradição de jogo ofensivo, técnico e atraente, que encantou o mundo especialmente nas décadas de 1960 e 1970, com diversos títulos nacionais e internacionais. O Santos conquistou várias vezes o Campeonato Paulista, o Brasileiro e a Copa Libertadores, além de títulos mundiais. A filosofia do clube sempre foi revelar jovens talentos e promover um futebol bonito e vencedor, consolidando o Santos como um verdadeiro celeiro de craques.</p>
-    <h>4. São Paulo</h>
+    <h1>4. São Paulo</h1>
     <img src="https://lncimg.lance.com.br/cdn-cgi/image/width=950,quality=75,fit=pad,format=webp/uploads/2024/09/sao-paulo-escudo_7510_1280x960-aspect-ratio-512-320.jpg" alt="">
     <p>O São Paulo Futebol Clube é um gigante do futebol brasileiro e sul-americano, fundado em 1930. É conhecido por sua estrutura profissional, excelente formação de atletas e consistência em competições de alto nível. O São Paulo é tricampeão mundial de clubes (1992, 1993 e 2005) e possui múltiplos títulos da Copa Libertadores e do Campeonato Brasileiro. O clube é reconhecido pela qualidade de seu futebol, que alia força defensiva a um ataque eficiente, e pela capacidade de se manter competitivo ao longo dos anos. A torcida tricolor é apaixonada e tem orgulho da história vitoriosa do time, que é um dos maiores símbolos do futebol paulista.</p>
-    <h>3. Palmeiras</h>
+    <h1>3. Palmeiras</h1>
     <img src="https://m.media-amazon.com/images/I/71Wl16iPpKL.jpg" alt="">
     O Palmeiras, fundado em 1914 por imigrantes italianos, é um dos clubes mais vitoriosos e organizados do Brasil. Com uma estrutura moderna e uma base sólida de fãs, o Verdão tem uma rica história de títulos, incluindo várias conquistas do Campeonato Brasileiro e da Copa Libertadores da América. Nos últimos anos, o clube viveu um período de ouro, conquistando importantes taças e se consolidando como uma potência no futebol nacional e continental. O Palmeiras é reconhecido pelo futebol técnico e eficiente, aliado a uma gestão profissional que garantiu estabilidade e sucesso. A rivalidade com o Corinthians é uma das maiores e mais intensas do país, conhecida como o Derby Paulista.
-    <h>2. Flamengo</h>
+    <h1>2. Flamengo</h1>
     <img src="https://s2-extra.glbimg.com/xMs2TpZUJ3GarjReEwA-Qwr7Yuo=/0x0:400x190/888x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f551ea7087a47f39ead75f64041559a/internal_photos/bs/2023/i/d/UywkxxTBuersRCuPnAyw/flamengo-arte.jpg" alt="">
     O Clube de Regatas do Flamengo é, sem dúvidas, o clube com a maior torcida do Brasil, e um dos mais reconhecidos mundialmente. Fundado em 1895, o Flamengo é sinônimo de paixão e sucesso, com uma história recheada de títulos nacionais e internacionais, incluindo múltiplas conquistas da Copa Libertadores e do Campeonato Brasileiro. O Flamengo conquistou o Mundial de Clubes em 1981, e recentemente viveu um auge de desempenho, liderado por craques como Gabigol e Bruno Henrique, com um futebol ofensivo e envolvente. O clube carioca é um símbolo do futebol alegre, com uma torcida que lota o Maracanã e faz o time sentir o peso da camisa.
-    <h>1. Corinthians</h>
+    <h1>1. Corinthians</h1>
     <img src="https://imagens.ebc.com.br/slnJMa9sVNqG7n2P13wST3-7WYQ=/1600x800/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/2025/04/02/torcida_organizada_corinthians_2025.jpg?itok=vJZLQUm6" alt="">
     <p>O Sport Club Corinthians Paulista é um dos maiores e mais populares clubes do Brasil, fundado em 1910 em São Paulo. O Corinthians tem uma torcida enorme, conhecida pela paixão e pelo apoio incondicional, e uma história marcada por grandes conquistas. Entre seus títulos mais importantes estão a Copa Libertadores da América e o Mundial de Clubes, ambos conquistados em 2012, momentos que ficaram eternizados na memória dos corinthianos. O clube é conhecido pela sua força defensiva, espírito de luta e por formar elencos competitivos em todas as épocas. A rivalidade com o Palmeiras é histórica, e o Corinthians representa o futebol da massa, com uma identidade muito forte ligada à classe trabalhadora.</p>
 </body>
