--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div align = "center">
     <h1>10. Botafogo</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStai7yFnQERzpnhSzvQXIoEwfq-0QnhdD-Rg&s" alt="">
     <p>O Botafogo é um clube histórico do Rio de Janeiro, conhecido como a “Estrela Solitária” por seu símbolo emblemático. Fundado em 1904, o clube tem uma tradição imensa na revelação de grandes craques, como Garrincha, Nilton Santos e Jairzinho, ícones do futebol brasileiro e mundial. Apesar de enfrentar altos e baixos nas últimas décadas, o Botafogo mantém uma torcida fiel e apaixonada, que sofre junto com o time e celebra cada conquista com muita emoção. O clube é reconhecido pelo seu estilo de jogo técnico e ofensivo, e por sua importância cultural no cenário do futebol carioca e nacional.</p>
@@ -36,5 +37,6 @@
     <h1>1. Corinthians</h1>
     <img src="https://imagens.ebc.com.br/slnJMa9sVNqG7n2P13wST3-7WYQ=/1600x800/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/2025/04/02/torcida_organizada_corinthians_2025.jpg?itok=vJZLQUm6" alt="">
     <p>O Sport Club Corinthians Paulista é um dos maiores e mais populares clubes do Brasil, fundado em 1910 em São Paulo. O Corinthians tem uma torcida enorme, conhecida pela paixão e pelo apoio incondicional, e uma história marcada por grandes conquistas. Entre seus títulos mais importantes estão a Copa Libertadores da América e o Mundial de Clubes, ambos conquistados em 2012, momentos que ficaram eternizados na memória dos corinthianos. O clube é conhecido pela sua força defensiva, espírito de luta e por formar elencos competitivos em todas as épocas. A rivalidade com o Palmeiras é histórica, e o Corinthians representa o futebol da massa, com uma identidade muito forte ligada à classe trabalhadora.</p>
+  </div>
 </body>
 </html>
